fix spacing

--- a/assets/scss/_game.scss
+++ b/assets/scss/_game.scss
@@ -37,7 +37,7 @@
   width: 100%;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
-  padding-bottom: 0.5rem;
+  padding: 6px 6px 0.5rem;
 }
 
 .gb__board {
